# manas

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md
.github/release-notes/: v1.0.0.md  v1.0.1.md
.github/workflows/: ci.yml  release.yml
manas-agent/src/: freshness.rs  pipeline.rs  scraper.rs  searcher.rs
manas-benches/benches/: bench.rs
manas-cli/: Cargo.toml
manas-cli/src/: main.rs  source_index.rs  source_store.rs
manas-core/src/: activation.rs  error.rs  network.rs  neuron.rs
manas-ingest/src/: file_reader.rs  folder_walker.rs  lib.rs  normalizer.rs
manas-ingest/src/format/: html.rs  markdown.rs  plaintext.rs  rust_source.rs
manas-language/: Cargo.toml
manas-language/src/: attention.rs  lib.rs  transformer.rs
manas-learn/src/: backprop.rs  decoder.rs  lib.rs  tokenizer.rs  trainer.rs
manas-memory/src/: compressor.rs  lib.rs  protector.rs  scorer.rs
manas-store/src/: format.rs  lib.rs  patcher.rs  reader.rs  writer.rs
teach/: basics.md  identity.md  math.md  rules.md
