[package]
name = "manas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manas CLI — command-line interface for the personal AI brain"

[dependencies]
manas-core = { workspace = true }
manas-memory = { workspace = true }
manas-store = { workspace = true }
manas-learn = { workspace = true }
manas-ingest = { workspace = true }
manas-agent = { workspace = true }
manas-language = { workspace = true }
clap = { version = "4", features = ["derive"] }
